src/objects/gdf_Communication__c.object
<CustomObject>
    <description>Used for the &quot;Contacts&quot; source GDF Suez data set and entity.</description>
    <fields>
        <fullName>gdf_Contact_Category__c</fullName>
        <description>indended for source data column contact category</description>
        <label>Contact Category</label>
        <picklist>
            <picklistValues>
                <fullName>Back office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>gdf_Communication</relationshipLabel>
        <relationshipName>gdf_Communications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gdf_Direction__c</fullName>
        <description>indended for the source data column &quot;direction&quot;</description>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_End_Date__c</fullName>
        <description>intended for source data column &quot;end date&quot;</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Start_Date__c</fullName>
        <description>intended for source data column &quot;start date&quot;</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_communication_id__c</fullName>
        <description>intended for the external communication Id value from source data</description>
        <externalId>true</externalId>
        <label>communication_id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Communication</label>
    <nameField>
        <displayFormat>CM{000000}</displayFormat>
        <label>Comm Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>